--- a/src/main/resources/localization/local.properties
+++ b/src/main/resources/localization/local.properties
@@ -1,4 +1,4 @@
-local.library = Library
+local.shop = Shop
 local.hello = Hello
 local.locbutton.name.en = ENG
 local.locbutton.name.ru = \u0420\u0423\u0421
