--- a/src/main/resources/localization/local_ch.properties
+++ b/src/main/resources/localization/local_ch.properties
@@ -1,4 +1,4 @@
-local.library = \u56FE\u4E66\u9986†
+local.shop = \u56FE\u4E66\u9986
 local.hello = \u60A8\u597D
 local.locbutton.name.en = ENG
 local.locbutton.name.ru = \u0420\u0423\u0421
