--- a/src/main/resources/localization/local_ru.properties
+++ b/src/main/resources/localization/local_ru.properties
@@ -1,4 +1,4 @@
-local.shop = \u0411\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0430
+local.shop = \u041C\u0430\u0433\u0430\u0437\u0438\u043D
 local.hello = \u041F\u0440\u0438\u0432\u0435\u0442
 local.locbutton.name.en = ENG
 local.locbutton.name.ru = \u0420\u0423\u0421
