--- a/src/main/resources/localization/local_en.properties
+++ b/src/main/resources/localization/local_en.properties
@@ -14,3 +14,5 @@ local.changePasswordText = Fill the form to change password
 local.deleteAccountText = Fill the form to delete account
 local.changePasswordButton = Change
 local.deleteAccountButton = Delete
+local.goToProfile=Update profile.
+local.goToBasket=Manage orders.
