апгрейд верстки команда на добавку товара в магазин изменена логика переадресации страниц gotopageCommand чуток локализация

--- a/src/main/resources/localization/local.properties
+++ b/src/main/resources/localization/local.properties
@@ -16,3 +16,6 @@ local.changePasswordButton = Change
 local.deleteAccountButton = Delete
 local.goToProfile=Update profile.
 local.goToBasket=Manage orders.
+local.manageProducts=Manage products.
+local.manageClients=Manage clients.
+local.manageOrders=Manage orders.
