--- a/src/main/resources/localization/local_ru.properties
+++ b/src/main/resources/localization/local_ru.properties
@@ -16,3 +16,6 @@ local.changePasswordButton = \u0421\u043C\u0435\u043D\u0438\u0442\u044C
 local.deleteAccountButton = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 local.goToProfile=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043F\u0440\u043E\u0444\u0438\u043B\u044C.
 local.goToBasket=\u041A\u043E\u0440\u0437\u0438\u043D\u0430.
+local.manageProducts=\u0423\u043F\u0440\u0430\u0432\u043B\u044F\u0442\u044C \u0442\u043E\u0432\u0430\u0440\u0430\u043C\u0438.
+local.manageClients=\u0423\u043F\u0440\u0430\u0432\u043B\u044F\u0442\u044C \u043A\u043B\u0438\u0435\u043D\u0442\u0430\u043C\u0438.
+local.manageOrders=\u0423\u043F\u0440\u0430\u0432\u043B\u044F\u0442\u044C \u0437\u0430\u043A\u0430\u0437\u0430\u043C\u0438.
