--- a/src/main/resources/localization/local_ch.properties
+++ b/src/main/resources/localization/local_ch.properties
@@ -14,8 +14,8 @@ local.changePasswordText = \u5982\u679C\u60F3\u6539\u5BC6\u7801\u5C31\u586B\u886
 local.deleteAccountText = \u5982\u679C\u628A\u5E10\u6237\u60F3\u5220\u9664\u5C31\u586B\u8868
 local.changePasswordButton = \u66F4\u6539
 local.deleteAccountButton = \u5220\u9664
-local.goToProfile=Update profile (ch).
-local.goToBasket=Manage orders (ch).
-local.manageProducts=Manage products(ch).
-local.manageClients=Manage clients (ch).
-local.manageOrders=Manage orders (ch).
+local.goToProfile=Update profile (ch)
+local.goToBasket=Manage orders (ch)
+local.manageProducts=Manage products(ch)
+local.manageClients=Manage clients (ch)
+local.manageOrders=Manage orders (ch)
